--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-Flask==2.3.3
-flask-socketio==5.1.2
-python-engineio==4.3.2
-python-socketio==5.6.0
+Flask
+flask-socketio
+python-engineio
+python-socketio
 chess
 eventlet
+pymongo
