--- a/dev.conf
+++ b/dev.conf
@@ -5,7 +5,7 @@ map $http_upgrade $connection_upgrade {
 
 server {
     listen       80;
-    server_name  chessroad.cn;
+    server_name  42.193.22.115;
 
     location / {
         proxy_http_version 1.1;
